[tool.poetry]
name = "langchain-logger"
version = "0.0.0"
description = "A Chain of Thought logger for langchain"
authors = ["patrick o'leary <pjaol@pjaol.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/thevgergroup/langchain-logger"
repository = "https://github.com/thevgergroup/langchain-logger.git"
documentation = "https://github.com/thevgergroup/langchain-logger"
keywords = ["langchain", "logger", "chain of thought", "AI", "GenAI"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Logging",
    ]
[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.12"
langchain-core = "^0.1.31"


[tool.poetry.group.dev.dependencies]
langchain-openai = "^0.0.8"


[tool.poetry-dynamic-versioning]
enable = true
[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
